# numpy_camera

./: pyproject.toml  readme.md
.github/workflows/: python.yaml
examples/: simple.py
numpy_camera/: pinhole_camera.py  threaded_camera.py  utils.py
