[tool.poetry]
name = "numpy_camera"
version = "0.0.3"
description = "???"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
# homepage = "https://pypi.org/project/empty/"
# repository = 'https://github.com/nimbus-bp-1729/empty'
# documentation = "http://..."
keywords = ["numpy", "camera"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# # script_name = 'myscript:main'

[tool.poetry.dependencies]
python = ">=3.6"
# importlib-metadata = {version = "*", python = "<3.8"}
numpy = "*"
picamera = {version = "*", optional = true}
colorama = "*"
slurm = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.extras]
picamera = ["picamera"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
